# DustRacing2D

./: .clang-format  .gitignore  ALUTConfig.cmake  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING  Gulpfile.js  INSTALL  InstallLinux.cmake  InstallWindows.cmake  Jenkinsfile  README  README-CHANGELOG.txt  README.md  RELEASES  TODO  VorbisConfig.cmake  _settings.scss  app.js  configure  dust.pro  dustrac-editor.desktop  dustrac-game.desktop  dustrac-game.pro  dustrac.pro  index.html  mxeEnv.sh  mxeWindowsBuild  package.json  style.css  styles.scss
src/editor/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.hpp  application.cpp  application.hpp  config.cpp  config.h  draganddropstore.cpp  draganddropstore.hpp  editor.cpp  editor.h  editor.pro  editordata.cpp  editordata.h  editordata.hpp  editormode.hpp  editorscene.cpp  editorscene.h  editorscene.hpp  editorview.cpp  editorview.h  editorview.hpp  floodfill.cpp  floodfill.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  map.cpp  map.h  map.hpp  mediator.cpp  mediator.hpp  newtrackdialog.cpp  newtrackdialog.h  newtrackdialog.hpp  object.cpp  object.h  object.hpp  objectdata.h  (+43 more)
src/editor/translations/: dustrac-editor_cs.ts  dustrac-editor_de.ts  dustrac-editor_fi.ts  dustrac-editor_fr.ts  dustrac-editor_it.ts  dustrac-editor_nl.ts  dustrac-editor_ru.ts  dustrac-editor_tr.ts
src/game/: CMakeLists.txt  ai.cpp  ai.hpp  ailogic.cpp  ailogic.hpp  application.cpp  application.hpp  audiosource.hpp  audiothread.cpp  audiothread.hpp  audioworker.cpp  audioworker.hpp  bridge.cpp  bridge.hpp  bridgetrigger.cpp  bridgetrigger.hpp  car.cpp  car.h  car.hpp  carfactory.cpp  carfactory.hpp  carparticleeffectmanager.cpp  carparticleeffectmanager.hpp  carphysicscomponent.cpp  carphysicscomponent.hpp  carsoundeffectmanager.cpp  carsoundeffectmanager.hpp  carstatusview.cpp  carstatusview.hpp  centrifugalforcegenerator.cpp  centrifugalforcegenerator.hpp  checkeredflag.cpp  checkeredflag.hpp  checkerflag.cpp  checkerflag.h  checkerflag.hpp  confirmationmenu.cpp  confirmationmenu.hpp  crashoverlay.cpp  crashoverlay.hpp  (+158 more)
src/game/MTFH/: CMakeLists.txt  Menu  MenuItem  MenuItemAction  MenuItemView  MenuManager  README  README.md  animationcurve.cpp  animationcurve.hpp  menu.cpp  menu.hpp  menuitem.cpp  menuitem.hpp  menuitemaction.cpp  menuitemaction.hpp  menuitemview.cpp  menuitemview.hpp  menumanager.cpp  menumanager.hpp
src/game/MiniCore/: .gitignore  CMakeLists.txt
src/game/MiniCore/Asset/: MCMeshManager  mcassetmanager.cc  mcassetmanager.hh  mcmeshconfigloader.cc  mcmeshloader.cc  mcmeshloader.hh  mcmeshmanager.cc  mcmeshmanager.hh  mcsurfaceconfigloader.cc  mcsurfacemanager.cc  mcsurfacemanager.hh  mcsurfacemetadata.hh
src/game/MiniCore/Core/: MCBBox3d  MCCast  MCContact  MCContactResolver  MCException  MCForceRegistry  MCFrictionGenerator  MCLogger  MCMacros  MCMathUtil  MCOBBox  MCObject  MCObjectFactory  MCObjectTree  MCOutOfBoundariesEvent  MCParticle  MCQuadTree  MCRay  MCRecycler  MCSegment  MCSpringForceGenerator2dFast  MCSurfaceView  MCTextBlock  MCTextureData  MCTextureParser  MCTimerEvent  MCVector3d  MCWorld  mcbbox.hh  mcbbox3d.hh  mccamera.cc  mccamera.hh  mccast.hh  mccircleshape.cc  mccircleshape.hh  mccircleshapeimpl.hh  mccollisiondetector.cc  mccollisiondetector.hh  mccollisiondetectorimpl.hh  mccollisionevent.cc  (+129 more)
src/game/MiniCore/Game/: mcgame.cc  mcgame.hh
src/game/MiniCore/Graphics/: MCCamera  MCGLColor  MCGLDiffuseLight  MCGLEW  MCGLM  MCGLPointParticle  MCGLPointParticleRenderer  MCGLRectParticleRenderer  MCGLScene  MCGLShaderProgram  MCGLVertex  MCSurfaceMetaData  MCTextureManager  glew.c  mccamera.cc  mccamera.hh  mcglambientlight.cc  mcglambientlight.hh  mcglcolor.hh  mcgldiffuselight.cc  mcgldiffuselight.hh  mcglmaterial.cc  mcglobjectbase.cc  mcglobjectbase.hh  mcglpointparticle.cc  mcglpointparticle.hh  mcglpointparticlerenderer.cc  mcglpointparticlerenderer.hh  mcglrectparticle.cc  mcglrectparticle.hh  mcglrectparticlerenderer.cc  mcglrectparticlerenderer.hh  mcglscene.cc  mcglscene.hh  mcglshaderprogram.cc  mcglshaderprogram.hh  mcgltexcoord.hh  mcglvertex.hh  mcmesh.cc  mcmesh.hh  (+43 more)
src/game/MiniCore/Obsolete/: MCFont  MCGLCircleParticle  MCText  mcfont.cc  mcfont.hh  mcglcircleparticle.cc  mcglcircleparticle.hh  mcglcircleparticleimpl.hh  mcmatrix22.hh  mctext.cc  mctext.hh  mctextblock.cc  (+1 more)
src/game/MiniWidgets/: mwmenu.cpp  mwmenu.h  mwobject.cpp  mwobject.h  mwscene.cpp  mwscene.h  mwselector.cpp  mwselector.h  mwtext.cpp  mwtext.h  mwwidget.cpp  mwwidget.h
src/game/SFX/: CMakeLists.txt  Music  Sound  SoundManager  device.cpp  device.hpp  music.cpp  music.hpp  sound.cpp  sound.hpp  soundconfigloader.cpp  soundconfigloader.hpp  soundmanager.cpp  soundmanager.hpp  soundmetadata.hpp
src/game/STFH/: CMakeLists.txt  Data  Device  Listener  Location  Source  World  data.cpp  data.hpp  datamanager.cpp  datamanager.hpp  device.cpp  device.hpp  listener.cpp  listener.hpp  location.cpp  location.hpp  source.cpp  source.hpp  world.cpp  world.hpp
src/game/audio/: audiosource.cpp  audiosource.hpp  audioworker.cpp  audioworker.hpp  openaldata.cpp  openaldata.hpp  openaldevice.cpp  openaldevice.hpp  openaloggdata.cpp  openaloggdata.hpp  openalsource.cpp  openalsource.hpp  openalwavdata.cpp  openalwavdata.hpp
src/game/menu/: confirmationmenu.cpp  confirmationmenu.hpp  credits.cpp  credits.hpp  difficultymenu.cpp  difficultymenu.hpp  help.cpp  help.hpp  keyconfigmenu.cpp  keyconfigmenu.hpp  lapcountmenu.cpp  lapcountmenu.hpp  mainmenu.cpp  mainmenu.hpp  resolutionmenu.cpp  resolutionmenu.hpp  settingsmenu.cpp  settingsmenu.hpp  surfacemenu.cpp  surfacemenu.hpp  textmenuitemview.cpp  textmenuitemview.hpp  trackselectionmenu.cpp  trackselectionmenu.hpp  vsyncmenu.cpp  vsyncmenu.hpp
src/game/models/: bridge.blend  bridge.mtl
src/game/sounds/: 179725__wjoojoo__impact-drill.flac
src/game/translations/: dustrac-game_cs.ts  dustrac-game_de.ts  dustrac-game_fi.ts  dustrac-game_fr.ts  dustrac-game_it.ts  dustrac-game_nl.ts  dustrac-game_ru.ts  dustrac-game_tr.ts
src/game/unittests/: CMakeLists.txt
web/: app.js  (+2 more)
(+611 files in other folders)
